--- a/online-exam-portal/build.gradle
+++ b/online-exam-portal/build.gradle
@@ -63,6 +63,12 @@ implementation group: 'org.hibernate', name: 'hibernate-core', version: '5.6.5.F
 implementation group: 'org.springframework.boot', name: 'spring-boot-starter-data-jpa', version: '2.6.6'
 
 implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '2.6.4'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
+    
+    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
+
+
 	
 }
 
